--- a/assets/scss/_custom-style.scss
+++ b/assets/scss/_custom-style.scss
@@ -12,3 +12,8 @@
 @import 'custom-style/buttons';
 @import 'custom-style/forms';
 @import 'custom-style/util';
+
+
+.main-products-box {
+  display: flex;
+}
