--- a/assets/scss/components/_components.scss
+++ b/assets/scss/components/_components.scss
@@ -1,2 +1,12 @@
 @import 'btn-group';
 @import 'card';
+@import 'diagonalmove';
+@import 'dropdown';
+@import 'tabs';
+@import 'navs';
+@import 'animatedBtn';
+@import 'search-input';
+@import 'header';
+@import 'footer';
+@import 'acordeon';
+@import 'select';
